# vigilance

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: build.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: config.example.json
src-tauri/src/: lib.rs  main.rs
